--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "single-spa": "^4.4.2",
-    "single-spa-react": "^2.11.0"
+    "single-spa-react": "^2.11.0",
+    "single-spa-vue": "^1.7.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
-    "@babel/core": "^7.8.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "http-server": "^0.12.1",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
