--- a/app1/package.json
+++ b/app1/package.json
@@ -15,8 +15,7 @@
     "react-router-dom": "^5.1.2",
     "single-spa": "^4.4.2",
     "single-spa-react": "^2.11.0",
-    "single-spa-vue": "^1.7.0",
-    "vue": "^2.6.11"
+    "systemjs-webpack-interop": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -27,9 +26,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.1",
-    "vue-loader": "^15.8.3",
-    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
