Add dev script to header app

--- a/app1/package.json
+++ b/app1/package.json
@@ -4,7 +4,7 @@
   "description": "A simple example of how to use webpack with single-spa",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open --entry ./src/index.js --output-path /dist/index.js",
     "build": "webpack --config webpack.config.js -p"
   },
   "author": "",
