--- a/app1/package.json
+++ b/app1/package.json
@@ -4,8 +4,8 @@
   "description": "A simple example of how to use webpack with single-spa",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --open --entry ./src/index.js",
-    "serve": "webpack-dev-server --entry ./src/header.app.js --output header.js",
+    "dev": "webpack-dev-server --open --config webpack.dev.config.js",
+    "serve": "webpack-dev-server --config webpack.serve.config.js",
     "build": "webpack --config webpack.config.js -p"
   },
   "author": "",
